# dewy/collection/models.py
@@ -40,8 +40,6 @@ class Collection(BaseModel):
     model_config = ConfigDict(from_attributes=True)
 
     """A collection of indexed documents."""
-    id: int
-    """The ID of the collection."""
 
     name: str
     """The name of the collection."""
