# dewy/document/router.py
@@ -85,15 +85,24 @@ async def add_document(
     """Add a document from a URL."""
     async with pg_pool.acquire() as conn:
         row = None
-        row = await conn.fetchrow(
-            """
-        INSERT INTO document (collection_id, url, ingest_state)
-        VALUES ($1, $2, 'pending')
-        RETURNING id, collection_id, url, ingest_state, ingest_error
-        """,
-            req.collection_id,
-            req.url,
-        )
+        try:
+            row = await conn.fetchrow(
+                """
+                INSERT INTO document (collection_id, url, ingest_state)
+                VALUES ((SELECT id FROM collection WHERE lower(name) = lower($1)), $2, 'pending')
+                RETURNING id, collection_id, url, ingest_state, ingest_error, $1 AS collection
+                """,
+                req.collection,
+                req.url,
+            )
+        except asyncpg.NotNullViolationError as e:
+            if e.column_name == "collection_id":
+                raise HTTPException(
+                    status_code=status.HTTP_404_NOT_FOUND,
+                    detail=f"No collection named '{req.collection}'",
+                )
+            else:
+                raise e from None
 
     document = Document.model_validate(dict(row))
 
@@ -156,41 +165,42 @@ PathDocumentId = Annotated[int, Path(..., description="The document ID.")]
 @router.get("/")
 async def list_documents(
     conn: PgConnectionDep,
-    collection_id: Annotated[
-        int | None,
+    collection: Annotated[
+        str | None,
         Query(description="Limit to documents associated with this collection"),
     ] = None,
 ) -> List[Document]:
     """List documents."""
     # TODO: Test
-    if collection_id is None:
-        results = await conn.fetch(
-            """
-            SELECT id, collection_id, url, ingest_state, ingest_error
-            FROM document
+    results = await conn.fetch(
         """
-        )
-    else:
-        results = await conn.fetch(
-            """
-            SELECT id, collection_id, url, ingest_state, ingest_error
-            FROM document WHERE collection_id = $1
+        SELECT d.id, c.name AS collection, d.url, d.ingest_state, d.ingest_error
+        FROM document d
+        JOIN collection c ON c.id = d.collection_id
+        WHERE lower(c.name) = coalesce(lower($1), lower(c.name))
         """,
-            collection_id,
-        )
+        collection,
+    )
+
     return [Document.model_validate(dict(result)) for result in results]
 
 
 @router.get("/{id}")
 async def get_document(conn: PgConnectionDep, id: PathDocumentId) -> Document:
-    # TODO: Test / return not found?
     result = await conn.fetchrow(
         """
-        SELECT id, collection_id, url, ingest_state, ingest_error, extracted_text
-        FROM document WHERE id = $1
+        SELECT d.id, c.name AS collection, d.url, d.ingest_state, d.ingest_error, d.extracted_text
+        FROM document d
+        JOIN collection c ON d.collection_id = c.id
+        WHERE d.id = $1
         """,
         id,
     )
+
+    if not result:
+        raise HTTPException(
+            status_code=status.HTTP_404_NOT_FOUND, detail=f"No document with ID {id}"
+        )
     return Document.model_validate(dict(result))
 
 
@@ -204,6 +214,11 @@ async def get_document_status(conn: PgConnectionDep, id: PathDocumentId) -> Docu
         """,
         id,
     )
+
+    if not result:
+        raise HTTPException(
+            status_code=status.HTTP_404_NOT_FOUND, detail=f"No document with ID {id}"
+        )
     return DocumentStatus(
         id=id, ingest_state=result["ingest_state"], ingest_error=result["ingest_error"]
     )
